--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 </head>
 <body>
     <div class="Header">
-       <p>Protfolio</p>
+       <p>Portfolio</p>
        <div class="menu-toggle" onclick="toggleMenu()">
            <span></span>
            <span></span>
