--- a/Projects.html
+++ b/Projects.html
@@ -406,7 +406,7 @@
             <button class="close-btn">X</button>
             <h3>Optimization of  Thermodynamic Performance Metrics for Brine-to-Fluid Heat Exchangers </h3>
         <div class="project-details">
-                 <img src="Project exp3.jpg" alt="Project 1" style="width: 70%; height: 400px; border-radius: 10px;">
+                 <img src="project exp3.jpg" alt="Project 1" style="width: 70%; height: 400px; border-radius: 10px;">
             <table>
     <tr>
       <td style="text-align: justify; padding: 10px;">
